# checkmark

./: README.md
cw-checkmark/: Cargo.toml  README.md
cw-checkmark/examples/: schema.rs
cw-checkmark/schema/: cw-checkmark.json
cw-checkmark/src/: contract.rs  contract_tests.rs  error.rs  msg.rs  state.rs  tests.rs
cw-checkmark/ts/: CwCheckmark.client.ts  CwCheckmark.message-composer.ts  CwCheckmark.react-query.ts  CwCheckmark.recoil.ts  CwCheckmark.types.ts  index.ts
pending-checkmarks-cf-worker/: DESIGN.md  README.md  package-lock.json  package.json  wrangler.toml.example
pending-checkmarks-cf-worker/src/: auth.ts  crypto.ts  index.ts  types.ts
pending-checkmarks-cf-worker/src/contracts/: CwCheckmark.ts  CwReceipt.ts
pending-checkmarks-cf-worker/src/providers/: index.ts  types.ts
pending-checkmarks-cf-worker/src/providers/synaps/: api.ts  index.ts  types.ts
pending-checkmarks-cf-worker/src/routes/: createSession.ts  getStatus.ts  nonce.ts  synapsWebhook.ts  webhook.ts
pending-checkmarks-cf-worker/src/utils/: chain.ts  checkmark.ts  index.ts  keys.ts  payment.ts  response.ts  synaps.ts
